--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
 
 :root {
-    --primary-color-light: #453f3d;
+    --primary-color-light: #7c7877;
     --primary-color-dark: #2a2727;
     --link-color: #00FEFC;
     --secondary-color: #39FF14;
@@ -71,4 +71,47 @@ nav {
 .link .nav__btn:hover {
     background-color: var(--dark-red-color);
     color: var(--text-color) !important;
+}
+
+.container {
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1rem;
+    min-height: calc(100vh - 100px);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem;
+}
+
+.content__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.content__container h1 {
+    font-size: 3rem;
+    font-weight: 400;
+    line-height: 3.5rem;
+    color: var(--text-color);
+    margin-bottom: 1rem;
+}
+
+.heading__1 {
+    font-weight: 700;
+    color: var(--primary-color-light);
+}
+
+.heading__2 {
+    font-weight: 700;
+    color: var(--primary-color-light);
+}
+
+.image__container img {
+    width: 100%;
+    height: auto;    
+}
+
+.image__container img:hover {
+    content: url('assets/happy_face.jpg');
 }
